--- a/package.json
+++ b/package.json
@@ -19,6 +19,15 @@
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-zoom": "^0.7.7",
+    "html2canvas": "^1.0.0-rc.7",
+    "html2pdf.js": "^0.9.3",
+    "jspdf": "^2.3.1",
+    "jspdf-new": "^1.5.3",
+    "ng2-charts": "^2.3.0",
+    "ngx-spinner": "^11.0.1",
+    "ngx-tabset": "^2.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
